# sidebar

./: README.md  README.zh.md  pyproject.toml
.github/workflows/: publish.yml
src/endstone_sidebar/: __init__.py  config.toml  sidebar_plugin.py
