[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-sidebar"
version = "0.2.0"
dependencies = []
authors = [
    { name = "daoge_cmd", email = "3523206925@qq.com" },
    { name = "Vincent", email = "magicdroidx@gmail.com" }
]
description = "Custom sidebar plugin for endstone"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "scoreboard", "sidebar"]

[project.urls]
Homepage = "https://github.com/endstone-essentials/sidebar"

[project.entry-points."endstone"]
sidebar = "endstone_sidebar:SidebarPlugin"
